mdapipkg/objects/Offer_Commission__c.object
<CustomObject>
    <fields>
        <fullName>Affiliate_Level__c</fullName>
        <label>Affiliate Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze</fullName>
                    <default>true</default>
                    <label>Bronze</label>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commission_Payable__c</fullName>
        <label>Commission Payable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fixed_Amount__c</fullName>
        <label>Fixed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer</label>
        <referenceTo>Offer__c</referenceTo>
        <relationshipLabel>Offer Commissions</relationshipLabel>
        <relationshipName>Offer_Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent_Of_Price__c</fullName>
        <label>Percent Of Price</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pricebook_Eligibility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricebook Eligibility</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Offer Commissions</relationshipLabel>
        <relationshipName>Offer_Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recalculate_Commission_Payable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recalculate Commission Payable</label>
        <type>Checkbox</type>
    </fields>
    <label>Offer Commission</label>
    <nameField>
        <displayFormat>OCN-{000}</displayFormat>
        <label>Offer Commission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offer Commissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Type_of_Commission</fullName>
        <active>true</active>
        <errorConditionFormula>IF (!ISNULL(Percent_Of_Price__c) &amp;&amp; !ISNULL(Fixed_Amount__c), TRUE, FALSE)</errorConditionFormula>
        <errorMessage>You can use either a &quot;Percent Of Price&quot; or a &quot;Fixed Amount&quot;.</errorMessage>
    </validationRules>
</CustomObject>